cambios agregamos amigos

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola estudiantes estes es mi sitio web.
+        Hola amigos estes es mi sitio web.
     </p>
 </body>
 </html>
